Fixed Heading on Small Widths

--- a/src/pages/about_page/AboutPage.css
+++ b/src/pages/about_page/AboutPage.css
@@ -48,4 +48,8 @@
         text-align: center;
         left: 0 !important;
     }
+
+    .about-page .heading-visible > h1 {
+        margin: 0 0 5vh 0;
+    }
 }
